[workspace]
members = [
    "account-decoder",
    "account-decoder-client-types",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-histogram",
    "banking-stage-ingress-types",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bloom",
    "bls-cert-verify",
    "bls-sigverify",
    "bucket_map",
    "builtins",
    "builtins-default-costs",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "compute-budget",
    "compute-budget-instruction",
    "connection-cache",
    "core",
    "cost-model",
    "cpu-utils",
    "download-utils",
    "entry",
    "faucet",
    "faucet-cli",
    "feature-set",
    "fee",
    "fs",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "gossip-cli",
    "install",
    "io-uring",
    "keygen",
    "lattice-hash",
    "leader-schedule",
    "ledger",
    "local-cluster",
    "logger",
    "math-utils",
    "measure",
    "merkle-tree",
    "metrics",
    "net-utils",
    "notifier",
    "perf",
    "poh",
    "poh-bench",
    "precompiles",
    "program-binaries",
    "program-runtime",
    "program-test",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/compute-budget",
    "programs/compute-budget-bench",
    "programs/ed25519-tests",
    "programs/system",
    "programs/vote",
    "programs/zk-elgamal-proof",
    "programs/zk-elgamal-proof-tests",
    "programs/zk-token-proof",
    "pubsub-client",
    "quic-client",
    "random",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "reserved-account-keys",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-client-types",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "scheduler-bindings",
    "scheduling-utils",
    "send-transaction-service",
    "snapshots",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "svm",
    "svm-callback",
    "svm-feature-set",
    "svm-log-collector",
    "svm-measure",
    "svm-timings",
    "svm-type-overrides",
    "syscalls",
    "syscalls/gen-syscall-list",
    "test-validator",
    "tls-utils",
    "tokens",
    "tpu-client",
    "tpu-client-next",
    "transaction-context",
    "transaction-status",
    "transaction-status-client-types",
    "transaction-view",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "validator",
    "version",
    "vote",
    "votor",
    "votor-messages",
    "watchtower",
    "xdp",
    "xdp-ebpf",
]

exclude = [
    "ci/xtask",
    "dev-bins",
    "programs/sbf",
    "svm/tests/example-programs",
]

resolver = "2"

[workspace.package]
version = "4.3.0-alpha.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Blockchain, Rebuilt for Scale"
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2024"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
    'cfg(target_arch, values("sbf"))',
]

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
# Denied lints
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
uninlined_format_args = "deny"
used_underscore_binding = "deny"

# Allowed lints
new_without_default = "allow"

[workspace.dependencies]
Inflector = "0.11.4"
agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-bls-cert-verify = { path = "bls-cert-verify", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-bls-sigverify = { path = "bls-sigverify", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-cpu-utils = { path = "cpu-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-feature-set = { path = "feature-set", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-fs = { path = "fs", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=4.3.0-alpha.0" }
agave-io-uring = { path = "io-uring", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-logger = { path = "logger", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-math-utils = { path = "math-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-precompiles = { path = "precompiles", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-random = { path = "random", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-reserved-account-keys = { path = "reserved-account-keys", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-scheduler-bindings = { path = "scheduler-bindings", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-scheduling-utils = { path = "scheduling-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-snapshots = { path = "snapshots", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-transaction-view = { path = "transaction-view", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-votor = { path = "votor", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-votor-messages = { path = "votor-messages", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-xdp = { path = "xdp", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
agave-xdp-ebpf = { path = "xdp-ebpf", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
ahash = "0.8.12"
anyhow = "1.0.103"
aquamarine = "0.6.0"
arbitrary = "1.4.2"
arc-swap = "1.9.2"
arrayref = "0.3.9"
arrayvec = "0.7.8"
assert_cmd = "2.2.2"
assert_matches = "1.5.0"
async-lock = "3.4.2"
async-trait = "0.1.89"
aya = "0.14"
aya-ebpf = "0.2.1"
base64 = "0.22.1"
bencher = "0.1.5"
bincode = "1.3.3"
bip39 = { version = "2.2.2", features = ["rand", "all-languages"] }
bitflags = { version = "2.13.0" }
bitvec = { version = "1.1.1", features = ["serde"] }
blake3 = "1.8.5"
blst = "0.3.16"
blstrs = "0.7.1"
borsh = { version = "1.7.0", features = ["derive", "unstable__schema"] }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
bytemuck = "1.25.0"
bytemuck_derive = "1.10.2"
bytes = "1.12.0"
bytesize = "2.4.0"
bzip2 = "0.6.1"
caps = "0.5.6"
cfg-if = "1.0.4"
chrono = { version = "0.4.45", default-features = false }
chrono-humanize = "0.2.3"
clap = { version = "2.33.1", default-features = false, features = ["suggestions"] }
console = "0.16.4"
const_format = "0.2.36"
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
csv = "1.4.0"
ctrlc = "3.5.2"
dashmap = "5.5.3"
derive-where = "1.6.1"
derive_more = { version = "2.1.1", features = ["full"] }
dialoguer = "0.12.0"
digest = "0.10.7"
dirs-next = "2.0.0"
dyn-clone = "1.0.20"
eager = "0.1.0"
ed25519-dalek = "2.2"
enum-iterator = "2.3.0"
env_logger = "0.11.11"
fast-math = "0.1"
fd-lock = "4.0.4"
five8 = "1.0.0"
flate2 = "1.1.9"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.32"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "1.1.0"
goauth = "0.17.0"
group = "0.13.0"
hex = "0.4.3"
hex-literal = "1.1.0"
hidapi = { version = "2.6.6", default-features = false }
histogram = "0.6.9"
http = "1.4.2"
humantime = "2.4.0"
hyper-util = "0.1.20"
imbl = "7.0.0"
indexmap = "2.14.0"
indicatif = "0.18.6"
io-uring = { version = "0.7.13", features = ["io_safety"] }
itertools = "0.14.0"
jemalloc-ctl = { package = "tikv-jemalloc-ctl", version = "0.6.0", features = [
    "stats",
] }
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
    "stats",
] }
json5 = "1.3.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
libc = "0.2.186"
libloading = "0.9.0"
libsecp256k1 = { version = "0.7.2", default-features = false, features = [
    "std",
    "static-context",
] }
log = "0.4.33"
lru = "0.18.0"
lz4 = "1.28.1"
memmap2 = "0.9.11"
memoffset = "0.9.1"
min-max-heap = "1.3.0"
mockall = "0.15.0"
modular-bitfield = "0.13.1"
nix = "0.31.3"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
num_enum = "0.7.6"
openssl = "0.10"
pairing = "0.23.0"
parking_lot = "0.12"
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "3.1"
pretty-hex = "0.4.2"
pretty_assertions = "1.4.1"
proptest = "1.11"
prost = "0.14.4"
prost-types = "0.14.4"
protobuf-src = "1.1.0"
protosol = "=9.1.1"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.11"
rand = "0.9.4"
rand_chacha = "0.9.0"
rayon = "1.12.0"
reed-solomon-erasure = "6.0.0"
regex = "1.12.4"
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.4.2"
rolling-file = "0.2.0"
rpassword = "7.5"
rts-alloc = { version = "4.0.0" }
rusb = "0.9"
rustls = { version = "0.23.41", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.28"
seqlock = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_json = "1.0.150"
serde_with = { version = "3.21.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "3.5.0"
shaq = { version = "3.0.0" }
shuttle = "0.7.1"
signal-hook = "0.4.4"
slab = "0.4.12"
slotmap = "1.0.7"
smallvec = { version = "1.15.2", default-features = false, features = ["union"] }
smpl_jwt = "0.9.0"
socket2 = "0.6.3"
soketto = "0.8"
solana-account = "4.3.1"
solana-account-decoder = { path = "account-decoder", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-account-decoder-client-types = { path = "account-decoder-client-types", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-account-info = "3.1.1"
solana-accounts-db = { path = "accounts-db", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-address = "2.6.1"
solana-address-lookup-table-interface = "3.1.0"
solana-banks-client = { path = "banks-client", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-banks-interface = { path = "banks-interface", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-banks-server = { path = "banks-server", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-bincode = "3.1.0"
solana-blake3-hasher = "3.1.0"
solana-bloom = { path = "bloom", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-bls-signatures = { version = "3.3.0", features = ["serde"] }
solana-bls12-381-syscall = "0.1.0"
solana-bn254 = "3.2.1"
solana-borsh = "3.0.2"
solana-bpf-loader-program = { path = "programs/bpf_loader", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-bucket-map = { path = "bucket_map", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-builtins = { path = "builtins", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-builtins-default-costs = { path = "builtins-default-costs", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-clap-utils = { path = "clap-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-clap-v3-utils = { path = "clap-v3-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-cli-config = { path = "cli-config", version = "=4.3.0-alpha.0" }
solana-cli-output = { path = "cli-output", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-client = { path = "client", version = "=4.3.0-alpha.0" }
solana-client-traits = "4.0.0"
solana-clock = "3.0.1"
solana-cluster-type = "3.1.0"
solana-commitment-config = "3.1.1"
solana-compute-budget = { path = "compute-budget", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-compute-budget-instruction = { path = "compute-budget-instruction", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-compute-budget-interface = "3.0.0"
solana-compute-budget-program = { path = "programs/compute-budget", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-config-interface = "2.0.0"
solana-connection-cache = { path = "connection-cache", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-core = { path = "core", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-cost-model = { path = "cost-model", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-cpi = "3.1.0"
solana-curve25519 = "4.0.1"
solana-derivation-path = "3.0.0"
solana-download-utils = { path = "download-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-ed25519-program = "3.0.0"
solana-entry = { path = "entry", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-epoch-info = "3.1.0"
solana-epoch-rewards = "3.1.0"
solana-epoch-rewards-hasher = "3.1.0"
solana-epoch-schedule = "3.2.0"
solana-faucet = { path = "faucet", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-feature-gate-interface = "4.0.0"
solana-fee = { path = "fee", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-fee-calculator = "3.2.2"
solana-fee-structure = "3.0.0"
solana-file-download = "3.1.4"
solana-frozen-abi = "3.7.0"
solana-frozen-abi-macro = "3.6.0"
solana-genesis = { path = "genesis", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-genesis-config = "4.0.0"
solana-genesis-utils = { path = "genesis-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-gossip = { path = "gossip", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-hard-forks = "3.1.1"
solana-hash = "4.5.0"
solana-hash-512 = "1.1.0"
solana-inflation = "3.1.1"
solana-instruction = "3.4.0"
solana-instruction-error = "2.4.0"
solana-instructions-sysvar = "4.0.0"
solana-keccak-hasher = "3.1.0"
solana-keypair = "3.1.2"
solana-last-restart-slot = "3.1.0"
solana-lattice-hash = { path = "lattice-hash", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-leader-schedule = { path = "leader-schedule", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-ledger = { path = "ledger", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-loader-v2-interface = "3.0.0"
solana-loader-v3-interface = "7.0.0"
solana-loader-v4-interface = "3.1.0"
solana-local-cluster = { path = "local-cluster", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-measure = { path = "measure", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-merkle-tree = { path = "merkle-tree", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-message = "4.2.4"
solana-metrics = { path = "metrics", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-msg = "3.1.0"
solana-native-token = "3.0.0"
solana-net-utils = { path = "net-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-nohash-hasher = "0.2.1"
solana-nonce = "3.2.0"
solana-nonce-account = "4.1.0"
solana-notifier = { path = "notifier", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-offchain-message = "3.0.0"
solana-packet = "4.2.0"
solana-perf = { path = "perf", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-poh = { path = "poh", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-poh-config = "3.0.0"
solana-poseidon = "4.0.0"
solana-precompile-error = "3.0.0"
solana-presigner = "3.0.0"
solana-program = { version = "4.0.0", default-features = false }
solana-program-binaries = { path = "program-binaries", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-program-runtime = { path = "program-runtime", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-program-test = { path = "program-test", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-pubkey = { version = "4.2.0", default-features = false }
solana-pubsub-client = { path = "pubsub-client", version = "=4.3.0-alpha.0" }
solana-quic-client = { path = "quic-client", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-rayon-threadlimit = { path = "rayon-threadlimit", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-remote-wallet = { path = "remote-wallet", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-rent = "4.2.1"
solana-reward-info = "6.2.0"
solana-rpc = { path = "rpc", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-rpc-client = { path = "rpc-client", version = "=4.3.0-alpha.0", default-features = false }
solana-rpc-client-api = { path = "rpc-client-api", version = "=4.3.0-alpha.0" }
solana-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=4.3.0-alpha.0" }
solana-rpc-client-types = { path = "rpc-client-types", version = "=4.3.0-alpha.0" }
solana-runtime = { path = "runtime", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-runtime-transaction = { path = "runtime-transaction", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-sanitize = "3.0.1"
solana-sbpf = { version = "=0.22.0", default-features = false }
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.1"
solana-secp256k1-recover = "3.2.0"
solana-secp256r1-program = "3.0.0"
solana-seed-derivable = "3.0.0"
solana-seed-phrase = "3.0.0"
solana-send-transaction-service = { path = "send-transaction-service", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-serde = "3.0.0"
solana-serde-varint = "3.0.1"
solana-serialize-utils = "3.1.2"
solana-sha256-hasher = "3.1.0"
solana-sha512-hasher = "1.0.1"
solana-short-vec = "3.2.2"
solana-shred-version = "3.0.1"
solana-signature = { version = "3.4.1", default-features = false }
solana-signer = "3.0.1"
solana-signer-store = "0.1.0"
solana-slot-hashes = "3.1.0"
solana-slot-history = "3.0.1"
solana-stable-layout = "3.0.1"
solana-stake-history = "1.0.0"
solana-stake-interface = "4.3.1"
solana-storage-bigtable = { path = "storage-bigtable", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-storage-proto = { path = "storage-proto", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-streamer = { path = "streamer", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm = { path = "svm", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-callback = { path = "svm-callback", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-feature-set = { path = "svm-feature-set", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-log-collector = { path = "svm-log-collector", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-measure = { path = "svm-measure", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-timings = { path = "svm-timings", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-svm-transaction = "4.2.0"
solana-svm-type-overrides = { path = "svm-type-overrides", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-syscalls = { path = "syscalls", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-system-interface = { version = "3.2", features = ["alloc", "bincode", "serde", "wincode"] }
solana-system-program = { path = "programs/system", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-system-transaction = "4.0.0"
solana-sysvar = "4.1.0"
solana-sysvar-id = "3.1.0"
solana-test-validator = { path = "test-validator", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-time-utils = "3.0.0"
solana-tls-utils = { path = "tls-utils", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-tpu-client = { path = "tpu-client", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-tpu-client-next = { path = "tpu-client-next", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-transaction = "4.1.5"
solana-transaction-context = { path = "transaction-context", version = "=4.3.0-alpha.0", features = ["agave-unstable-api", "bincode"] }
solana-transaction-error = "3.3.1"
solana-transaction-status = { path = "transaction-status", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-transaction-status-client-types = { path = "transaction-status-client-types", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-turbine = { path = "turbine", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-udp-client = { path = "udp-client", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-validator-exit = "3.0.0"
solana-version = { path = "version", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-vote = { path = "vote", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-vote-interface = "6.0.3"
solana-vote-program = { path = "programs/vote", version = "=4.3.0-alpha.0", default-features = false, features = ["agave-unstable-api"] }
solana-wincode-varint = "1.0.0"
solana-zk-elgamal-proof-interface = "0.1.3"
solana-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
solana-zk-sdk = "7.0.1"
solana-zk-sdk-pod = "0.1.2"
solana-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=4.3.0-alpha.0", features = ["agave-unstable-api"] }
spl-associated-token-account-interface = "2.0.0"
spl-generic-token = "2.0.0"
spl-memo-interface = "2.1.0"
spl-pod = "0.7.3"
spl-token-2022-interface = "3.1.0"
spl-token-confidential-transfer-proof-extraction = "0.6.1"
spl-token-group-interface = "0.7.2"
spl-token-interface = "3.0.0"
spl-token-metadata-interface = "1.0.1"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.28.0"
strum_macros = "0.28.0"
symlink = "0.1.0"
sys-info = "0.9.1"
sysctl = "0.7.1"
tar = "0.4.46"
tarpc = "0.29.0"
tempfile = "3.27.0"
test-case = "3.3.1"
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-serde = "0.8"
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tracing = "0.1"
trait-set = "0.3.0"
trees = "0.4.2"
trezor-client = { version = "0.1.5", default-features = false, features = ["solana"] }
tungstenite = "0.28.0"
unwrap_none = "0.1.2"
ur-parse-lib = { version = "1.0.3", default-features = false, features = ["std"] }
ur-registry = { version = "1.0.3", default-features = false, features = ["std"] }
uriparse = "0.6.4"
url = "2.5.8"
winapi = "0.3.8"
wincode = { version = "0.5.5", features = ["derive"] }
winreg = "0.55"
x509-parser = "0.18.1"
xxhash-rust = "0.8.5"
zstd = "0.13.3"

[profile.dev]
debug = "line-tables-only"

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.full-dev]
inherits = "dev"
debug = "full"

# Enable optimizations for ci unittests to trigger const propagation and inlining
[profile.ci]
inherits = "test"
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.crates-io]
# for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }
