[package]
name = "solana-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
solana-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
solana-clock = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent-collector = { workspace = true }
solana-version = { workspace = true }
